--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
       - uses: actions/checkout@v3
       - id: foo
         uses:  AkMo3/WikiPathway-composite-actions/changed-files@v1.2
-      - run: echo random-number ${{ steps.foo.outputs.changed_gpml_file_name }}
+      - name: Changed Files
+        if: ${{ steps.foo.outputs.changed_gpml_file_name }}
+        run: echo changed file ${{ steps.foo.outputs.changed_gpml_file_name }}
         shell: bash
  
