--- a/.github/workflows/on_gpml_change.yml
+++ b/.github/workflows/on_gpml_change.yml
@@ -9,7 +9,7 @@ on:
       - master
 
 jobs:
-  get_changed_files:
+  check-changed-gpml:
     runs-on: ubuntu-latest
     name: Get changed GPML files
     outputs:
