Fix: Fix linting issue for on_gpml_change

--- a/.github/workflows/on_gpml_change.yml
+++ b/.github/workflows/on_gpml_change.yml
@@ -38,4 +38,4 @@ jobs:
             🌏
             !
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          repo-token-user-login: 'github-actions[bot]
+          repo-token-user-login: 'github-actions[bot]'
